fixed add skill funcitonality, fixed skill card images stretching

--- a/frontend/src/components/skills/Skills.css
+++ b/frontend/src/components/skills/Skills.css
@@ -82,6 +82,7 @@
   border-radius: 20px;
   width: 300px;
   height: 200px;
+  object-fit: cover;
 }
 
 .skills__title {
